fix: slight adjust in check mark alignment (#1678)
* fix: adjust check mark alignment

* fix: avoid position

--- a/src/components/select-field/SelectField.scss
+++ b/src/components/select-field/SelectField.scss
@@ -21,4 +21,6 @@
     flex: none;
     width: 20px;
     height: 16px;
+    margin-left: -5px;
+    text-align: left;
 }
